cmake_minimum_required(VERSION 3.21)
project(Trab_AED_01)

set(CMAKE_CXX_STANDARD 14)

add_executable(Trab_AED_01 main.cpp Trab_AED_01/employees.cpp Trab_AED_01/employees.h Trab_AED_01/flights.cpp Trab_AED_01/flights.h Trab_AED_01/planes.cpp Trab_AED_01/planes.h Trab_AED_01/services.cpp Trab_AED_01/services.h)
