cmake_minimum_required(VERSION 3.21)
project(Trab_AED_01)

set(CMAKE_CXX_STANDARD 14)

add_executable(Trab_AED_01 Trab_AED_01/main.cpp Trab_AED_01/employees.cpp Trab_AED_01/employees.h Trab_AED_01/flights.cpp Trab_AED_01/flights.h Trab_AED_01/planes.cpp Trab_AED_01/planes.h Trab_AED_01/services.cpp Trab_AED_01/services.h Trab_AED_01/menu.cpp Trab_AED_01/menu.h Trab_AED_01/tickets.cpp Trab_AED_01/tickets.h Trab_AED_01/company.cpp Trab_AED_01/company.h Trab_AED_01/transport.h Trab_AED_01/transport.cpp Trab_AED_01/baggage.cpp Trab_AED_01/baggage.h Trab_AED_01/treadmill.cpp Trab_AED_01/treadmill.h Trab_AED_01/cart.cpp Trab_AED_01/cart.h)
